buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'com.guardsquare:proguard-gradle:7.6.0'
    }
}

plugins {
    id 'java'
    id 'application'
}

java {
    toolchain {
        // Compile and run with Java 21
        languageVersion.set(JavaLanguageVersion.of(21))
    }

    // Source/target compatibility for Java 21 language level
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = "jagex2.client.Client"
}

jar {
    manifest {
        attributes(
            'Main-Class': 'jagex2.client.Client'
        )
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.register('proguard', proguard.gradle.ProGuardTask) {
    configuration file('proguard.pro')

    injars(tasks.named('jar', Jar).flatMap { it.archiveFile })

    outjars(layout.buildDirectory.file("libs/${project.name}.rel.jar"))
}
